--- a/public/css/app.css
+++ b/public/css/app.css
@@ -654,6 +654,10 @@ select {
   margin-left: auto;
   margin-right: auto;
 }
+.my-4 {
+  margin-top: 1rem;
+  margin-bottom: 1rem;
+}
 .ml-3 {
   margin-left: 0.75rem;
 }
@@ -704,6 +708,9 @@ select {
 }
 .mt-6 {
   margin-top: 1.5rem;
+}
+.mt-32 {
+  margin-top: 8rem;
 }
 .block {
   display: block;
