--- a/public/css/app.css
+++ b/public/css/app.css
@@ -688,14 +688,17 @@ select {
 .-mr-2 {
   margin-right: -0.5rem;
 }
+.mt-32 {
+  margin-top: 8rem;
+}
+.mb-1 {
+  margin-bottom: 0.25rem;
+}
 .ml-2 {
   margin-left: 0.5rem;
 }
 .mb-12 {
   margin-bottom: 3rem;
-}
-.mt-32 {
-  margin-top: 8rem;
 }
 .mt-2 {
   margin-top: 0.5rem;
@@ -711,12 +714,6 @@ select {
 }
 .mt-6 {
   margin-top: 1.5rem;
-}
-.mb-1 {
-  margin-bottom: 0.25rem;
-}
-.ml-auto {
-  margin-left: auto;
 }
 .mr-3 {
   margin-right: 0.75rem;
@@ -988,13 +985,13 @@ select {
   --tw-bg-opacity: 1;
   background-color: rgb(99 102 241 / var(--tw-bg-opacity));
 }
-.bg-indigo-400 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(129 140 248 / var(--tw-bg-opacity));
-}
 .bg-red-400 {
   --tw-bg-opacity: 1;
   background-color: rgb(248 113 113 / var(--tw-bg-opacity));
+}
+.bg-indigo-400 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(129 140 248 / var(--tw-bg-opacity));
 }
 .bg-indigo-50 {
   --tw-bg-opacity: 1;
@@ -1142,13 +1139,13 @@ select {
   font-size: 1.125rem;
   line-height: 1.75rem;
 }
-.text-2xl {
-  font-size: 1.5rem;
-  line-height: 2rem;
-}
 .text-xs {
   font-size: 0.75rem;
   line-height: 1rem;
+}
+.text-2xl {
+  font-size: 1.5rem;
+  line-height: 2rem;
 }
 .text-3xl {
   font-size: 1.875rem;
@@ -1465,6 +1462,10 @@ Demo Animation Style
 .micromodal-slide .modal__overlay {
   will-change: transform;
 }
+.swiper-container {
+  /* width: 600px; */
+  height: 300px;
+}
 .hover\:border-gray-300:hover {
   --tw-border-opacity: 1;
   border-color: rgb(209 213 219 / var(--tw-border-opacity));
@@ -1481,13 +1482,13 @@ Demo Animation Style
   --tw-bg-opacity: 1;
   background-color: rgb(243 244 246 / var(--tw-bg-opacity));
 }
-.hover\:bg-indigo-500:hover {
-  --tw-bg-opacity: 1;
-  background-color: rgb(99 102 241 / var(--tw-bg-opacity));
-}
 .hover\:bg-red-500:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(239 68 68 / var(--tw-bg-opacity));
+}
+.hover\:bg-indigo-500:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(99 102 241 / var(--tw-bg-opacity));
 }
 .hover\:bg-gray-50:hover {
   --tw-bg-opacity: 1;
